# context-cite

./: .gitignore  LICENSE  README.md  cosine_sims.npy  environment.yml  masks.npy  pyproject.toml  requirements.txt
app/: __init__.py  app.py
assets/: solar_eclipse.txt  transformer.txt
context_cite/: 6.8.24.tune_alphas.ipynb  __init__.py  cc_groq.py  context_citer.py  context_partitioner.py  cosine_sims.npy  evals.py  lasso.py  masks.npy  solver.py  utils.py
evaluation/: eval_rag.py  hpp_qa.json  hpp_qa_evaluated.json  webscraper.py
notebooks/: README.md  context_cite_langchain_example.ipynb  debug.py  example.ipynb  quickstart_example.ipynb  rag_langchain_example.ipynb
tests/: test_class.py
