[tool.poetry]
name = "groq_context_cite"
version = "0.1.0"
description = "Fast causal attributions using Groq"
authors = ["John Yang <johnyang@mit.edu>"]

[tool.poetry.dependencies]
python = "^3.8"
numpy = "^1.21.0"
torch = "^1.9.0"
transformers = "^4.9.0"
datasets = "^1.11.0"
pandas = "^1.3.0"
nltk = "^3.6.2"
spacy = "^3.1.0"
scikit-learn = "^0.24.2"
tqdm = "^4.61.2"
groq = "^0.1.0"
openai = "^0.10.2"
cohere = "^1.0.0"
context-cite = "*"
pinecone-client = "^2.0.0"
# dotenv = "^0.19.0"
# streamlit = "^0.84.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

